--- a/index.html
+++ b/index.html
@@ -16,7 +16,28 @@
 				<textarea class="from-text" spellcheck="false" placeholder="Enter text"></textarea>
 				<textarea class="to-text" spellcheck="false" disabled placeholder="Translation"></textarea>
 			</div>
+
+			<ul class="controls">
+				<li class="row from">
+					<div class="icons">
+						<i id="from" class="fas fa-volume-up"></i>
+						<i id="from" class="fas fa-copy"></i>
+					</div>
+					<select></select>
+				</li>
+				<li class="exchange">
+					<i class="fas fa-exchange-alt"></i>
+				</li>
+				<li class="row to">
+					<select></select>
+					<div class="icons">
+						<i id="to" class="fas fa-volume-up"></i>
+						<i id="from" class="fas fa-copy"></i>
+					</div>
+				</li>
+			</ul>
 		</div>
+		<button>Translate Text</button>
 	</div>
 	
 
